@@ -13,14 +13,14 @@ class Ui_LicenseWindow(object):
     def setupUi(self, LicenseWindow):
         LicenseWindow.setObjectName("LicenseWindow")
         LicenseWindow.setWindowModality(QtCore.Qt.WindowModality.NonModal)
-        LicenseWindow.resize(810, 930)
+        LicenseWindow.resize(850, 950)
         sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Policy.Fixed, QtWidgets.QSizePolicy.Policy.Fixed)
         sizePolicy.setHorizontalStretch(0)
         sizePolicy.setVerticalStretch(0)
         sizePolicy.setHeightForWidth(LicenseWindow.sizePolicy().hasHeightForWidth())
         LicenseWindow.setSizePolicy(sizePolicy)
-        LicenseWindow.setMinimumSize(QtCore.QSize(810, 930))
-        LicenseWindow.setMaximumSize(QtCore.QSize(810, 930))
+        LicenseWindow.setMinimumSize(QtCore.QSize(850, 950))
+        LicenseWindow.setMaximumSize(QtCore.QSize(850, 950))
         LicenseWindow.setModal(True)
         self.verticalLayout_2 = QtWidgets.QVBoxLayout(LicenseWindow)
         self.verticalLayout_2.setObjectName("verticalLayout_2")
@@ -70,9 +70,12 @@ class Ui_LicenseWindow(object):
         self.horizontalLayout.addWidget(self.ButtonReject)
         spacerItem = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Expanding, QtWidgets.QSizePolicy.Policy.Minimum)
         self.horizontalLayout.addItem(spacerItem)
-        self.gridLayout.addLayout(self.horizontalLayout, 5, 0, 1, 3)
+        self.gridLayout.addLayout(self.horizontalLayout, 6, 0, 1, 3)
         self.verticalLayout = QtWidgets.QVBoxLayout()
         self.verticalLayout.setObjectName("verticalLayout")
+        self.SpacerLabel_1 = QtWidgets.QLabel(parent=self.frame)
+        self.SpacerLabel_1.setObjectName("SpacerLabel_1")
+        self.verticalLayout.addWidget(self.SpacerLabel_1)
         self.CheckBoxAgreement = QtWidgets.QCheckBox(parent=self.frame)
         font = QtGui.QFont()
         font.setFamily("Calibri")
@@ -87,6 +90,9 @@ class Ui_LicenseWindow(object):
         self.CheckBoxDontShowAgain.setFont(font)
         self.CheckBoxDontShowAgain.setObjectName("CheckBoxDontShowAgain")
         self.verticalLayout.addWidget(self.CheckBoxDontShowAgain)
+        self.SpacerLabel = QtWidgets.QLabel(parent=self.frame)
+        self.SpacerLabel.setObjectName("SpacerLabel")
+        self.verticalLayout.addWidget(self.SpacerLabel)
         self.gridLayout.addLayout(self.verticalLayout, 4, 0, 1, 3)
         spacerItem1 = QtWidgets.QSpacerItem(222, 20, QtWidgets.QSizePolicy.Policy.Expanding, QtWidgets.QSizePolicy.Policy.Minimum)
         self.gridLayout.addItem(spacerItem1, 0, 0, 1, 1)
@@ -178,8 +184,10 @@ class Ui_LicenseWindow(object):
         LicenseWindow.setWindowTitle(_translate("LicenseWindow", "Signal | GNU General Public License"))
         self.ButtonAccept.setText(_translate("LicenseWindow", "Accept"))
         self.ButtonReject.setText(_translate("LicenseWindow", "Reject"))
+        self.SpacerLabel_1.setText(_translate("LicenseWindow", "    "))
         self.CheckBoxAgreement.setText(_translate("LicenseWindow", "I am agree with the terms and conditions"))
         self.CheckBoxDontShowAgain.setText(_translate("LicenseWindow", "Don\'t show this message anymore"))
+        self.SpacerLabel.setText(_translate("LicenseWindow", "    "))
         self.InfoBoard.setDocumentTitle(_translate("LicenseWindow", "GNU/GPL license agreement"))
         self.InfoBoard.setHtml(_translate("LicenseWindow", "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-html40/strict.dtd\">\n"
 "<html><head><meta name=\"qrichtext\" content=\"1\" /><title>GNU/GPL license agreement</title><style type=\"text/css\">\n"
