@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>810</width>
-    <height>930</height>
+    <width>850</width>
+    <height>950</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,14 +21,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>810</width>
-    <height>930</height>
+    <width>850</width>
+    <height>950</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>810</width>
-    <height>930</height>
+    <width>850</width>
+    <height>950</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -141,7 +141,7 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="5" column="0" colspan="3">
+      <item row="6" column="0" colspan="3">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QPushButton" name="ButtonAccept">
@@ -175,6 +175,13 @@
       <item row="4" column="0" colspan="3">
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
+         <widget class="QLabel" name="SpacerLabel_1">
+          <property name="text">
+           <string>    </string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QCheckBox" name="CheckBoxAgreement">
           <property name="font">
            <font>
@@ -197,6 +204,13 @@
           </property>
           <property name="text">
            <string>Don't show this message anymore</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="SpacerLabel">
+          <property name="text">
+           <string>    </string>
           </property>
          </widget>
         </item>
